--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -19,3 +19,9 @@
       - code
     update_cache: true
     state: present
+
+# This is a bit hacky
+- name: Set shortcut menu
+  community.general.dconf:
+    key: "/org/gnome/shell/favorite-apps"
+    value: "['org.mozilla.firefox.desktop', 'code.desktop', 'virtualbox.desktop', 'eclipse-2025-06.desktop', 'org.gnome.Nautilus.desktop', 'org.gnome.Software.desktop', 'org.gnome.Terminal.desktop', 'org.remmina.Remmina.desktop']" # noqa yaml[line-length]
